Fix UserServiceWithDisabledSignupTest